<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingBottom="32dp"
    tools:ignore="VisualLintTextFieldSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/md_theme_primary"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/welcome_to_flight_search_app"
                android:textColor="@color/md_theme_onPrimary"
                android:textSize="24sp"
                app:fontFamily="@font/abril_fatface_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/flight_search_app_icon"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_flight_search"
                    app:tint="@color/md_theme_onPrimary" />

                <SearchView
                    android:id="@+id/svFlight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:iconifiedByDefault="false"
                    android:background="@drawable/bg_search"
                    android:queryHint="Search for a Flight..."
                    android:padding="8dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/flightFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/flights_from"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/rvFlightList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFlightList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flightFrom" />

        <TextView
            android:id="@+id/noResultsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_results"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>